@@ -1,3 +1,7 @@
+9/1/2003
+	- The Update.delete(Record) method needs to reset the TTL of the cloned
+	  record to 0. (reported by Edwin R. Rivera <erivera@moniker.com>)
+
 8/23/2003
 	- Change Record.fromString() to expect an EOL/EOF token at the end
 	  of the string, so that extraneous tokens can be detected.  The master
